--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Day 8: Note Pad</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <div class="notepad" contenteditable>
 Hi friend,<br>
 <br>
@@ -11,3 +21,7 @@ Zastrow<br>
   <br>
   P.S. Feel free to edit this message 😁
 </div>
+<!-- partial -->
+  
+</body>
+</html>
